# agents-sdk-playground

./: .env.example  CLAUDE.md  FEATURES.md  README.md  playwright.config.ts  pyproject.toml
.claude/agents/backend-agent/: SKILL.md
.claude/agents/frontend-agent/: SKILL.md
.claude/agents/qa-agent/: SKILL.md
.claude/agents/ui-review-agent/: SKILL.md
.claude/commands/: orchestrate.md
.claude/skills/cooking/: SKILL.md
.claude/skills/orchestration/: PHASES.md  SKILL.md
.claude/skills/resend-email-branding/: SKILL.md
agents/: __init__.py
agents/echo/: __init__.py  agent.py  tools.py
agents/echo/prompts/: system.md
agents/pong/: __init__.py  agent.py
agents/pong/prompts/: system.md
agents/sdlc/: __init__.py  feature_orchestrator.py  orchestrator.py  parallel_validator.py
agents/sdlc/agents/: __init__.py  builder.py  debugger.py  planner.py  qa.py  reviewer.py  tester.py  ui_reviewer.py
agents/sdlc/prompts/: builder.md  debugger.md  planner.md  qa.md  reviewer.md  test_criteria.md  tester.md  ui_reviewer.md
backend/: __init__.py  auth.py  main.py  models.py  repos.py  sessions.py  websocket.py
frontend/: app.js  index.html  style.css
tests/: agent-panel.spec.ts
