[project]
name = "agents-sdk-playground"
version = "0.1.0"
description = "Custom Agents mit Claude Agent SDK - Pong, Echo und Micro SDLC System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
    # Phase 1: GitHub OAuth + Repo Management
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "PyGithub>=2.1.0",
    "itsdangerous>=2.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
pong = "agents.pong.agent:main"
echo = "agents.echo.agent:main"
sdlc = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "backend"]
